Changed background color and fixed white space on bottom

--- a/App-Tracker/src/Components/App.css
+++ b/App-Tracker/src/Components/App.css
@@ -1,10 +1,11 @@
 .header {
   text-align: center;
+  color: white;
 }
 
 .body {
     width: fit-content;
-    margin: 1rem auto;
+    margin: 1rem auto auto;
     padding: 50px 50px 50px 50px;
     display: flex;
     gap: 2rem;
