--- a/App-Tracker/src/index.css
+++ b/App-Tracker/src/index.css
@@ -1,5 +1,5 @@
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 #root {
-    background-color: rgb(235, 228, 228);
+    background-color: rgb(3, 3, 3);
 }
